--- a/client/src/index.css
+++ b/client/src/index.css
@@ -80,12 +80,25 @@ input {
     padding: 3em 0 3em 0;
 }
 
+.main-container__lightboard {
+    margin: 0 5em 0 5em;
+    padding: 3em 0 3em 0;
+}
+
+.main-container__lightboard h1 {
+    margin: 3em 0 2em 0;
+}
+
 .main-container h1 {
-    margin: 1em 0 1em 0;
+    margin: 2.5em 0 1em 0;
 }
 
 .margin-bottom {
     margin: 0 0 2em 0;
+}
+
+.margin-bottom__thin {
+    margin: 0 0 1.2em 0;
 }
 
 .margin-top {
@@ -108,6 +121,7 @@ input {
 }
 
 .navbar-light {
+    background-color: #FEFEFE;
     color: rgba(0,0,0,.5) !important;
 }
 
