--- a/client/src/index.css
+++ b/client/src/index.css
@@ -66,6 +66,7 @@ body, html {
     margin: 0;
     padding: 0;
     font-family: 'Europa-Bold', sans-serif;
+    font-size: 1.1rem;
 }
 
 input {
@@ -140,10 +141,6 @@ input {
     margin: 3em 0 2em 0;
 }
 
-.main-container h1 {
-    margin: 2.5em 0 1em 0;
-}
-
 .margin-bottom {
     margin: 0 0 2em 0;
 }
@@ -197,8 +194,25 @@ input {
     margin: 4em 2em 4em 2em;
 }
 
+.speaker-deck__header {
+    margin: 2.5em 0 1em 0;
+}
+
+.user-list__active-users {
+    margin: 1.4em 0 0 0;
+}
+
+.user-list__active-users th, td {
+    font-family: 'Europa-Regular', sans-serif;
+}
+
+.table td, .table th {
+    padding: .5em 0 .5em 0;
+}
+
 .text-input {
-    border: 1px solid #DBE0DF;
+    /*border: 1px solid #DBE0DF;*/
+    font-family: 'Europa-Regular', sans-serif;
     height: 3.2em;
 }
 
