Formatting issues and unused variables.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -129,7 +129,7 @@ input {
 
 .main-container {
     margin: 0 5em 0 5em;
-    padding: 3em 0 3em 0;
+    padding: 3em 0 0 0;
 }
 
 .main-container__lightboard {
@@ -173,6 +173,10 @@ input {
     color: rgba(0,0,0,.5) !important;
 }
 
+.padding-top {
+    margin: 6em;
+}
+
 .sign-in-box {
     margin: 2em 0 0 0;
  }
@@ -191,7 +195,7 @@ input {
 }
 
 .sign-in__logo {
-    margin: 4em 2em 4em 2em;
+    margin: 4em 2em 1.5em 2em;
 }
 
 .speaker-deck__header {
