--- a/client/src/index.css
+++ b/client/src/index.css
@@ -80,11 +80,11 @@ input {
 
 .btn-info.disabled, .btn-info:disabled {
     border-color: unset !important;
-    background-color: #D5D5D3 !important;
+    background-color: #00b9ff !important;
 }
 
 .bg-primary {
-    background-color: #355263 !important;
+    background-color: #00b9ff !important;
 }
 
  .card {
@@ -164,8 +164,9 @@ input {
 }
 
 .navbar-light .navbar-brand {
+    background-color: #00b9ff;
+    color: #fff;
     padding: 1.3em;
-    color: #1F313F;
 }
 
 .navbar-light {
@@ -217,7 +218,6 @@ input {
 }
 
 .user-sign-in--dashboard-link:hover {
-
     padding-left: 15px;
     color: #517594
 }
