--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,52 +1,33 @@
 @font-face {
-    font-family: "Europa-Bold";
-    src: url("./assets/fonts/EuropaBold.eot"); /* IE9 Compat Modes */
-    src: url("./assets/fonts/EuropaBold.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
-    url("./assets/fonts/EuropaBold.otf") format("opentype"), /* Open Type Font */
-    url("./assets/fonts/EuropaBold.svg") format("svg"), /* Legacy iOS */
-    url("./assets/fonts/EuropaBold.ttf") format("truetype"), /* Safari, Android, iOS */
-    url("./assets/fonts/EuropaBold.woff") format("woff"), /* Modern Browsers */
-    url("./assets/fonts/EuropaBold.woff2") format("woff2"); /* Modern Browsers */
+    font-family: 'Gotham Rounded Book';
+    src: url('./assets/fonts/GothamRounded-Book.eot');
+    src: url('./assets/fonts/GothamRounded-Book.eot?#iefix') format('embedded-opentype'),
+    url('./assets/fonts/GothamRounded-Book.woff2') format('woff2'),
+    url('./assets/fonts/GothamRounded-Book.woff') format('woff'),
+    url('./assets/fonts/GothamRounded-Book.svg#GothamRounded-Book') format('svg');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
-    font-family: "Europa-BoldItalic";
-    src: url("./assets/fonts/EuropaBoldItalic.eot"); /* IE9 Compat Modes */
-    src: url("./assets/fonts/EuropaBoldItalic.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
-    url("./assets/fonts/EuropaBoldItalic.otf") format("opentype"), /* Open Type Font */
-    url("./assets/fonts/EuropaBoldItalic.svg") format("svg"), /* Legacy iOS */
-    url("./assets/fonts/EuropaBoldItalic.ttf") format("truetype"), /* Safari, Android, iOS */
-    url("./assets/fonts/EuropaBoldItalic.woff") format("woff"), /* Modern Browsers */
-    url("./assets/fonts/EuropaBoldItalic.woff2") format("woff2"); /* Modern Browsers */
-    font-weight: normal;
+    font-family: 'Gotham Rounded';
+    src: url('./assets/fonts/GothamRounded-Medium.eot');
+    src: url('./assets/fonts/GothamRounded-Medium.eot?#iefix') format('embedded-opentype'),
+    url('./assets/fonts/GothamRounded-Medium.woff2') format('woff2'),
+    url('./assets/fonts/GothamRounded-Medium.woff') format('woff'),
+    url('./assets/fonts/GothamRounded-Medium.svg#GothamRounded-Medium') format('svg');
+    font-weight: 500;
     font-style: normal;
 }
 
 @font-face {
-    font-family: "Europa-Regular";
-    src: url("./assets/fonts/EuropaRegular.eot"); /* IE9 Compat Modes */
-    src: url("./assets/fonts/EuropaRegular.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
-    url("./assets/fonts/EuropaRegular.otf") format("opentype"), /* Open Type Font */
-    url("./assets/fonts/EuropaRegular.svg") format("svg"), /* Legacy iOS */
-    url("./assets/fonts/EuropaRegular.ttf") format("truetype"), /* Safari, Android, iOS */
-    url("./assets/fonts/EuropaRegular.woff") format("woff"), /* Modern Browsers */
-    url("./assets/fonts/EuropaRegular.woff2") format("woff2"); /* Modern Browsers */
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: "Europa-RegularItalic";
-    src: url("./assets/fonts/EuropaRegularItalic.eot"); /* IE9 Compat Modes */
-    src: url("./assets/fonts/EuropaRegularItalic.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
-    url("./assets/fonts/EuropaRegularItalic.otf") format("opentype"), /* Open Type Font */
-    url("./assets/fonts/EuropaRegularItalic.svg") format("svg"), /* Legacy iOS */
-    url("./assets/fonts/EuropaRegularItalic.ttf") format("truetype"), /* Safari, Android, iOS */
-    url("./assets/fonts/EuropaRegularItalic.woff") format("woff"), /* Modern Browsers */
-    url("./assets/fonts/EuropaRegularItalic.woff2") format("woff2"); /* Modern Browsers */
-    font-weight: normal;
+    font-family: 'Gotham Rounded';
+    src: url('./assets/fonts/GothamRounded-Light.eot');
+    src: url('./assets/fonts/GothamRounded-Light.eot?#iefix') format('embedded-opentype'),
+    url('./assets/fonts/GothamRounded-Light.woff2') format('woff2'),
+    url('./assets/fonts/GothamRounded-Light.woff') format('woff'),
+    url('./assets/fonts/GothamRounded-Light.svg#GothamRounded-Light') format('svg');
+    font-weight: 300;
     font-style: normal;
 }
 
@@ -56,18 +37,22 @@
         padding: 1em;
     }
 
-     .card-deck {
-         margin-left: 0;
-         margin-right: 0;
-     }
+    .card-deck {
+        margin-left: 0;
+        margin-right: 0;
+    }
 }
 
 body, html {
     background-color: #FEFEFE;
     margin: 0;
     padding: 0;
-    font-family: 'Europa-Bold', sans-serif;
+    font-family: 'Gotham Rounded', sans-serif;
     font-size: 1.1rem;
+}
+
+h1 {
+    font-weight: 600;
 }
 
 input {
@@ -88,14 +73,37 @@ input {
     background-color: #00b9ff !important;
 }
 
- .card {
-     border: none;
-     background-color: #f4f7f6;
- }
+.card {
+    border: none;
+    border-radius: .5em;
+    background-color: #f4f7f6;
+}
 
- .col-sm-10 {
-     max-width: 100%;
- }
+.card-body {
+    padding: 1.6em 0 1em .3em;
+}
+
+.card-img-top {
+    width: 100%;
+    height: 16vw;
+    object-fit: cover;
+}
+
+.card-ing-top img {
+    max-width: 100%;
+    max-height: 100%;
+    display: inline-block; /* Instead of display: block; */
+    margin: 0 auto;
+    vertical-align: middle;
+}
+
+.card-title {
+    margin: 0;
+}
+
+.col-sm-10 {
+    max-width: 100%;
+}
 
 .col-form-label-lg {
     padding-bottom: .7em;
@@ -106,25 +114,35 @@ input {
 }
 
 .configure-pane h2 {
+    font-weight: 600;
     margin-bottom: 2em;
 }
 
 .configure-pane > .table-responsive thead th {
     font-size: 1.2em;
+    font-weight: inherit;
 }
 
 .configure-pane > .table-responsive td {
     padding: 0 1em 1em 0;
 }
 
- .form-control:focus {
-     border-color: #DBE0DF;
-     -webkit-box-shadow: unset;
-     box-shadow: unset;
- }
+.filepond--drop-label label {
+    font-family: 'Gotham Rounded Book', sans-serif;
+}
+
+.form-control:focus {
+    border-color: #DBE0DF;
+    -webkit-box-shadow: unset;
+    box-shadow: unset;
+}
 
 .form-control-lg {
     border-radius: 0;
+}
+
+.h1, .h2, .h3 {
+    font-weight: 600;
 }
 
 .inverse {
@@ -155,6 +173,7 @@ input {
 }
 
 .main-container__lightboard h1 {
+    font-weight: 600;
     margin: 3em 0 2em 0;
 }
 
@@ -188,7 +207,7 @@ input {
 
 .navbar-light {
     background-color: #FEFEFE;
-    color: rgba(0,0,0,.5) !important;
+    color: rgba(0, 0, 0, .5) !important;
 }
 
 .padding-top {
@@ -197,7 +216,7 @@ input {
 
 .sign-in-box {
     margin: 2em 0 0 0;
- }
+}
 
 .sign-in-box .btn-info {
     background-color: #355263;
@@ -237,22 +256,22 @@ input {
 }
 
 .speaker-deck__header {
+    font-weight: 600;
     margin: 2.5em 0 1em 0;
 }
 
 .speaker-photo {
     width: 300px;
     height: 300px;
-    background-color:#CCCCCC;
-    margin:10px;
-    display:inline-block;
-    float:left;
-    position:relative;
+    background-color: #CCCCCC;
+    display: inline-block;
+    float: left;
+    position: relative;
 }
 
 .speaker-photo img {
     max-width: 100%;
-    max-height:100%;
+    max-height: 100%;
     display: inline-block; /* Instead of display: block; */
     margin: 0 auto;
     vertical-align: middle;
@@ -263,7 +282,7 @@ input {
 }
 
 .user-list__active-users th, td {
-    font-family: 'Europa-Regular', sans-serif;
+    font-family: 'Gotham Rounded', sans-serif;
 }
 
 .user-sign-in--dashboard-link {
@@ -282,7 +301,7 @@ input {
 }
 
 .text-input {
-    font-family: 'Europa-Regular', sans-serif;
+    font-family: 'Gotham Rounded', sans-serif;
     height: 3.2em;
 }
 
