--- a/client/src/index.css
+++ b/client/src/index.css
@@ -121,6 +121,10 @@ input {
     padding: 0 1em 1em 0;
 }
 
+.filepond--root {
+    max-width: 40%;
+}
+
 .filepond--drop-label label {
     font-family: 'Gotham Rounded Book', sans-serif;
 }
@@ -438,7 +442,7 @@ and (min-width: 321px) {
     }
 
     .card-img-top {
-        display: none;
+        object-fit: contain;
     }
 
     .card-title {
@@ -490,7 +494,7 @@ and (max-width: 320px) {
     }
 
     .card-img-top {
-        display: none;
+        object-fit: contain;
     }
 
     .card-title {
@@ -517,13 +521,6 @@ and (max-width: 320px) {
         margin-bottom: 1.3em;
     }
 
-}
-
-@media only screen
-and (min-width: 471px) {
-    .nav-link__text {
-        display: none;
-    }
 }
 
 /* iPads (portrait and landscape) ----------- */
@@ -572,7 +569,7 @@ and (min-width: 924px) {
     }
 
     .card-img-top {
-        display: unset;
+        object-fit: cover;
     }
 
     .line-break {
@@ -610,7 +607,7 @@ and (min-width: 1424px) {
     }
 
     .card-img-top {
-        display: unset;
+        object-fit: cover;
     }
 
     .line-break {
