--- a/client/src/index.css
+++ b/client/src/index.css
@@ -245,6 +245,10 @@ input {
     margin: 4em 2em 1.5em 2em;
 }
 
+.sign-in__logo_parent {
+    text-align: center;
+}
+
 .slide-pane_from_bottom {
     background-color: #fff;
 }
@@ -306,12 +310,12 @@ input {
 
 .user-sign-in--dashboard-link {
     font-size: 1.2em;
-    padding-left: 15px;
+    margin: 1em 0 0 0;
     color: #355263;
 }
 
 .user-sign-in--dashboard-link:hover {
-    padding-left: 15px;
+    /*padding-left: 15px;*/
     color: #517594
 }
 
@@ -459,7 +463,7 @@ and (min-width: 321px) {
     }
 
     .margin-top {
-        margin: 0;
+        margin: 1em 2.5em 0 2.5em;
     }
 
     .nav-link__text {
@@ -589,7 +593,7 @@ and (min-width: 924px) {
     }
 
     .margin-top {
-        margin: 1em;
+        margin: 1em 0 0 0;
     }
 
     .nav-link__text {
