--- a/client/src/index.css
+++ b/client/src/index.css
@@ -449,7 +449,7 @@ and (min-width: 321px) {
     }
 
     .card-body {
-        padding: 1em 0 1em 0;
+        padding: 3% 0 .5em 0;
     }
 
     .card-deck {
@@ -459,7 +459,8 @@ and (min-width: 321px) {
 
     .card-deck .card {
         margin: 0 1em 1em 1em;
-        padding: .5em;
+        max-height: 9vh;
+        padding: 5%;
     }
 
     .card-img-top {
@@ -520,7 +521,8 @@ and (max-width: 320px) {
 
     .card-deck .card {
         margin: 0 1em 1em 1em;
-        padding: .1em;
+        max-height: 10vh;
+        padding: .2em;
     }
 
     .card-img-top {
@@ -557,10 +559,14 @@ and (max-width: 320px) {
 @media only screen
 and (min-device-width: 768px)
 and (max-device-width: 1024px) {
+    .card-deck .card {
+        max-height: unset;
+    }
+
     .card-img-top {
         display: unset;
     }
-    
+
     .nav-link__text {
         display: none;
     }
@@ -572,13 +578,12 @@ and (min-device-width: 768px)
 and (max-device-width: 1024px)
 and (orientation: landscape) {
     /*.card {*/
-        /*color: gray;*/
+    /*color: gray;*/
     /*}*/
-
     .line-break {
         display: inline;
     }
-    
+
     .nav-link__text {
         display: none;
     }
@@ -591,7 +596,23 @@ and (max-device-width: 1024px)
 and (orientation: portrait) {
     .card {
         /*color: teal;*/
-        min-width: 300px;
+        max-width: 10em;
+    }
+
+    .card-deck {
+        justify-content: center;
+    }
+
+    .line-break {
+        display: inline;
+    }
+
+    .main-container {
+        margin: 0 2em 0 2em;
+    }
+
+    .speaker-deck__header {
+        margin: 2em 0 1em 0;
     }
 }
 
@@ -604,8 +625,14 @@ and (min-width: 924px) {
         flex: 0 0 auto;
     }
 
+    .card-deck {
+        justify-content: center;
+    }
+
     .card-deck .card {
         margin: 1em 0 0 1em;
+        max-width: 24%;
+        max-height: unset;
     }
 
     .card-img-top {
@@ -645,6 +672,7 @@ and (min-width: 1424px) {
 
     .card-deck .card {
         margin: 0 1em 0 0;
+        max-height: unset;
     }
 
     .card-img-top {
@@ -676,9 +704,8 @@ and (min-width: 1424px) {
 @media only screen
 and (min-width: 1824px) {
     /*.card {*/
-        /*color: fuchsia;*/
+    /*color: fuchsia;*/
     /*}*/
-
     .nav-link__text {
         display: unset;
     }
@@ -696,5 +723,60 @@ and (min-width: 1824px) {
 @media only screen
 and (-webkit-min-device-pixel-ratio: 1.5), only screen
 and (min-device-pixel-ratio: 1.5) {
-    /* Styles */
+    .card {
+        /*color: red;*/
+        min-width: 12em;
+    }
+
+    .card-body {
+        padding: 3% 0 .5em 0;
+    }
+
+    .card-deck {
+        flex-flow: row wrap;
+        justify-content: space-around;
+    }
+
+    .card-deck .card {
+        margin: 0 1em 1em 1em;
+        max-height: 9vh;
+        padding: 5%;
+    }
+
+    .card-img-top {
+        display: none;
+    }
+
+    .card-title {
+        text-align: center;
+    }
+
+    .line-break {
+        display: none;
+    }
+
+    .margin-top {
+        margin: 1em 2.5em 0 2.5em;
+    }
+
+    .nav-link__text {
+        display: unset;
+    }
+
+    .speaker-deck__header {
+        text-align: center;
+    }
+
+    .main-container__lightboard h1 {
+        text-align: center;
+    }
+
+    .main-container__lightboard {
+        margin: 4em 5em 0 5em;
+        padding: 3em 0 3em 0;
+    }
+
+    .text-input {
+        margin-bottom: 1.3em;
+    }
 }
